alignment and style fixes. added comments in files

--- a/lucky7s.css
+++ b/lucky7s.css
@@ -49,4 +49,29 @@ th {
 
 #results {
 	color: #790604;
+	display: inline-block;
+	text-align: center;
+}
+
+.form-group{
+	display: in-line block;
+	text-align: center;
+	float: none;
+	vertical-align: middle;
+}
+
+.btn-group {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	vertical-align: middle;
+}
+
+label {
+	display: in-line block;
+	text-align: center;
+}
+
+input {
+	vertical-align: top;
 }
